CSS/Aside.css
aside {
	height: 100vh;
	position: sticky;
	position: -webkit-sticky;
	top: 0;
	left: 0;
	display: flex;
	flex-direction: column;
	gap: 16px;
	padding: 16px;
}

aside header {
	display: flex;
	justify-content: space-between;
	align-items: center;
}

aside section {
	display: flex;
	align-items: flex-start;
	flex-direction: column;
	gap: 16px;
	position: relative;
	z-index: 2;
	overflow-y: auto;
	overflow-x: hidden;
}

aside footer {
	display: flex;
	flex-grow: 1;
	align-items: flex-end;
	position: relative;
	z-index: 1;
}

#dropdownItems,
#dropdownUsername {
	display: none;
	width: 320px;
	overflow: clip;
	flex-direction: column;
	position: absolute;
	border-radius: 16px;
}

#dropdownItems {
	top: 35%;
	left: 40%;
}

#dropdownUsername {
	bottom: 16%;
	left: 5%;
}

